--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -30,6 +30,7 @@ html .BusinessList {
   margin-bottom: 0.8rem;
   font-size: 2.1008rem;
   font-weight: 400;
+  text-transform: capitalize;
 }
 .BusinessList-Container {
   display: flex;
