--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,13 @@ body {
   overscroll-behavior: none;
   font-size: 1.6rem;
 }
+/* //hide scrollbar// */
+* {
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 /*
   Avoid text overflows
 */
@@ -99,8 +106,6 @@ p {
   font-weight: 400;
 }
 
-.Toastify__toast-container--top-center {
-}
 /* ///////media queries ////////// */
 
 @media screen and (max-width: 575px) {
