--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -2,10 +2,7 @@
   background-image: url('../../assets/images/hairwhite.jpg');
 }
 
-.FeatureContainer_image.EditUser {
-  background-image: url('../../assets/images/hairgreysm.jpg');
-}
-
+.FeatureContainer_image.EditUser,
 .FeatureContainer_image.Owner {
   background-image: url('../../assets/images/hairgreysm.jpg');
 }
@@ -64,3 +61,18 @@ img.user-pix-placeholder {
   height: 125px;
   border-radius: 50%;
 }
+
+/* ///////media queries ////////// */
+
+@media screen and (max-width: 575px) {
+  .FeatureContainer_image.User {
+    background-image: url('../../assets/images/hairwhite-mobile.jpg');
+    height: 100%;
+  }
+  .FeatureContainer_image.EditUser,
+  .FeatureContainer_image.Owner  {
+    background-image: url('../../assets/images/hairgrey-mobile.jpg');
+    height: 100%;
+  }
+
+
