--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -35,25 +35,23 @@ img.user-pix-placeholder {
 }
 .Profile-UserContainer {
   border: 1px solid rgba(0, 0, 0, 0.5);
-  padding: 45px;
+  padding: 4.5rem;
   height: 58vh;
   background-image: url('../../assets/images/hairwhitebg.jpg');
   position: relative;
 }
-.Profile-UserContainer_reviews {
+.Profile-UserContainer_reviews h4 {
   border-top: 1px solid #f32dc8;
   border-bottom: 1px solid #f32dc8;
-  margin-top: 20px;
+  font-weight: 500;
+  padding: 1rem;
+  margin: 0;
 }
 
 .Profile-UserContainer_reviews.business {
   margin-top: 0;
 }
-.Profile-UserContainer_reviews h4 {
-  font-weight: 500;
-  padding: 10px;
-  margin: 0;
-}
+
 .Profile_links {
   display: flex;
   justify-content: center;
@@ -63,4 +61,7 @@ img.user-pix-placeholder {
   width: 125px;
   height: 125px;
   border-radius: 50%;
+}
+.Profile-UserContainer.Owner {
+  background-image: url('../../assets/images/hairgreybg.jpg');
 }
