--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,9 +57,15 @@ h1 {
   font-size: 3.6rem;
   font-weight: 100;
 }
+h2 {
+  font-size: 3rem;
+  font-weight: 100;
+  margin: 0;
+}
 h3 {
   font-size: 2.4rem;
   font-weight: 300;
+  margin: 0;
 }
 h4 {
   font-size: 1.8rem;
@@ -70,6 +76,11 @@ h5 {
   line-height: 19px;
   font-weight: 300;
   margin: 20px 0 15px 0;
+}
+p {
+  line-height: 1.9rem;
+  font-weight: 400;
+  margin: 0;
 }
 
 .btn--btn-primary {
@@ -93,14 +104,7 @@ h5 {
 a {
   text-decoration: none;
 }
-p {
-  font-size: 1.4rem;
-  line-height: 17px;
-  font-weight: 400;
-}
 
-.Toastify__toast-container--top-center {
-}
 /* ///////media queries ////////// */
 
 @media screen and (max-width: 575px) {
