update my business buttons

--- a/client/src/components/MyBusinessList/MyBusinessList.css
+++ b/client/src/components/MyBusinessList/MyBusinessList.css
@@ -4,7 +4,7 @@
   margin-bottom: 2rem;
 }
 .btn--btn-primary.business {
-  width: 25%;
+  width: 95px;
   margin: 0;
   padding-top: 0px;
   line-height: 1.6rem;
