--- a/client/src/components/CardDetails/CardDetails.css
+++ b/client/src/components/CardDetails/CardDetails.css
@@ -38,7 +38,9 @@
   line-height: 2.8rem;
   font-size: 2.2rem;
 }
-
+.CardDetails-Address {
+  text-transform: capitalize;
+}
 .CardDetails-Address p {
   font-size: 1.6rem;
   line-height: 1rem;
