update mobile images height 100%

--- a/client/src/pages/Auth/Login/Login.css
+++ b/client/src/pages/Auth/Login/Login.css
@@ -43,5 +43,6 @@
   }
   .FeatureContainer_image.Login {
     background-image: url('../../../assets/images/hairwhite-mobile.jpg');
+    height: 100%;
   }
 }
