--- a/client/src/pages/AddBusiness/AddBusiness.css
+++ b/client/src/pages/AddBusiness/AddBusiness.css
@@ -74,3 +74,18 @@ input.AddBusiness-FormCard_filtersContainer_formCheckInput {
     height: 100%;
   }
 }
+.AddBusiness_inputGroup {
+  text-align: center;
+  margin-top: 160px;
+  grid-column: none;
+  flex-wrap: wrap;
+  height: 50%;
+  overflow-y: scroll;
+}
+.AddBusiness_scroll {
+  width: 100%;
+}
+.AddBusiness-FormCard_sidebar {
+  margin: auto;
+  margin-top: 3rem;
+}
