style business-list

--- a/client/src/pages/AddBusiness/AddBusiness.css
+++ b/client/src/pages/AddBusiness/AddBusiness.css
@@ -1,4 +1,4 @@
-.FeatureContainer_image.Profile {
+.FeatureContainer_image.AddBusiness {
   background-image: url('../../assets/images/hairlavender.jpg');
   margin-bottom: -10px;
 }
