--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -1,64 +1,34 @@
-html .BusinessList {
-  font-size: 100% !important;
+.FeatureContainer_image.BusinessList {
+  background-image: url('../../assets/images/hairgreysm.jpg');
 }
 
-.BusinessList {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100vh;
-  align-items: center;
-  padding-top: 10vh;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  background-image: url(../../assets/images/hairgreysm.jpg);
-}
-.BusinessList-Wrapper_loader {
-  display: flex;
-  justify-content: center;
-  margin-top: -38rem;
-}
-.BusinessList-HeaderContainer {
-  justify-content: flex-end;
-  display: flex;
-  flex-direction: column;
-  height: 10.68rem;
-  text-align: center;
+.FeatureContainer.Business {
+  grid-template-columns: repeat(16, 1fr);
+  grid-column-gap: 40px;
 }
 .BusinessList-Header {
-  margin-bottom: 0.8rem;
-  font-size: 2.1008rem;
-  font-weight: 400;
+  grid-column: 4/14;
+  margin-top: 150px;
+  text-align: center;
+  margin-bottom: -60px;
 }
-.BusinessList-Container {
-  display: flex;
-  width: 77.2rem;
-  justify-content: center;
+.BusinessList-Filters.leftColumn {
+  border: 0.5px solid black;
+  padding: 1.6rem;
+  text-align: left;
+  height: -moz-fit-content;
+  height: fit-content;
+  grid-column: 4/7;
+  /* margin-top: 40px; */
 }
-.BusinessList-Filters {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 60.8rem;
-  width: 18.8rem;
-  margin-right: 2.125em;
-  padding: 2rem 0 0 0;
-  border: 0.25px solid rgba(0, 0, 0, 1);
-}
-.BusinessList-CardContainer {
-  height: 60.8rem;
-  width: 59.6rem;
-  overflow: scroll;
-}
-.BusinessList-Card {
-  width: 100%;
-  height: 30.4rem;
-  position: relative;
-  padding: 1rem;
-  overflow: hidden;
-  border-radius: 0px;
-  box-shadow: none;
-  border: 0.25px solid rgba(0, 0, 0, 0.7);
-  background-image: url(../../assets/images/hairgreysm.jpg);
+
+.BusinessList.rightColumn {
+  border: 0.5px solid black;
+  background-image: url('../../assets/images/hairgreybg.jpg');
+  padding: 3.5rem;
+  /* margin-top: 40px; */
+  grid-column: 7/14;
+  height: -moz-fit-content;
+  height: fit-content;
+  max-height: 58vh;
 }
