--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -2,33 +2,37 @@
   background-image: url('../../assets/images/hairgreysm.jpg');
 }
 
-.FeatureContainer.Business {
+.BusinessList-Header {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  top: 110px;
+}
+
+.FeatureContainer.BusinessList {
   grid-template-columns: repeat(16, 1fr);
   grid-column-gap: 40px;
 }
-.BusinessList-Header {
-  grid-column: 4/14;
-  margin-top: 150px;
-  text-align: center;
-  margin-bottom: -60px;
-}
+
 .BusinessList-Filters.leftColumn {
   border: 0.5px solid black;
   padding: 1.6rem;
   text-align: left;
-  height: -moz-fit-content;
-  height: fit-content;
   grid-column: 4/7;
-  /* margin-top: 40px; */
+  background-image: url('../../assets/images/hairgreybg.jpg');
+  margin-top: 200px;
+  height: 58vh;
+  position: relative;
 }
 
-.BusinessList.rightColumn {
+.BusinessList-Filters.rightColumn {
   border: 0.5px solid black;
   background-image: url('../../assets/images/hairgreybg.jpg');
   padding: 3.5rem;
-  /* margin-top: 40px; */
   grid-column: 7/14;
   height: -moz-fit-content;
   height: fit-content;
   max-height: 58vh;
+  overflow-y: scroll;
+  margin-top: 200px;
 }
