--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -13,7 +13,11 @@
   grid-template-columns: repeat(16, 1fr);
   grid-column-gap: 40px;
 }
-
+.BusinessList-none {
+  grid-column: 4/14;
+  text-align: center;
+  margin-top: 140px;
+}
 .BusinessList-Filters.leftColumn {
   border: 0.5px solid black;
   padding: 1.6rem;
@@ -35,4 +39,14 @@
   max-height: 58vh;
   overflow-y: scroll;
   margin-top: 200px;
+}
+
+/* ///////media queries ////////// */
+
+@media screen and (max-width: 575px) {
+  .FeatureContainer_image.BusinessList {
+    background-image: url('../../assets/images/hairgrey-mobile.jpg');
+    margin-bottom: 0;
+    height: 100%;
+  }
 }
