--- a/client/src/components/BusinessDetails/BusinessDetails.css
+++ b/client/src/components/BusinessDetails/BusinessDetails.css
@@ -20,7 +20,7 @@
 .BusinessDetails-leftColumn {
   border: 0.5px solid black;
   padding: 1.6rem;
-  text-align: left;
+  text-align: center;
   height: fit-content;
   grid-column: 4/7;
   margin-top: 160px;
@@ -86,6 +86,11 @@ h5.features:last-child {
   .BusinessDetails-rightColumn {
     grid-column: 7/15;
   }
+
+  .btn--btn-primary.review.book,
+  .phoneNumber {
+    align-self: end;
+  }
 }
 
 @media screen and (max-width: 575px) {
@@ -98,7 +103,7 @@ h5.features:last-child {
   }
 
   .BusinessDetails-leftColumn {
-    width: 50%;
+    width: 60%;
     margin: auto;
     margin-top: 60px;
   }
