--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -43,10 +43,42 @@
 
 /* ///////media queries ////////// */
 
+@media screen and (max-width: 990px) {
+  .BusinessList-Filters.leftColumn {
+    grid-column: 3/7;
+  }
+  .BusinessList-Filters.rightColumn {
+    grid-column: 7/15;
+  }
+}
+
 @media screen and (max-width: 575px) {
   .FeatureContainer_image.BusinessList {
     background-image: url('../../assets/images/hairgrey-mobile.jpg');
     margin-bottom: 0;
     height: 100%;
+  }
+
+  .FeatureContainer.BusinessList {
+    width: 100%;
+    height: 70%;
+    overflow-y: scroll;
+    margin-top: 200px;
+  }
+
+  .BusinessList-Header {
+    left: 20%;
+    transform: translate(0%, 0);
+  }
+
+  .BusinessList-Filters.leftColumn {
+    width: 60%;
+    margin: auto;
+  }
+  .BusinessList-Filters.rightColumn {
+    width: 85%;
+    margin: auto;
+    margin-top: 3rem;
+    padding-bottom: 0rem;
   }
 }
