changed all star styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -127,3 +127,9 @@ a {
 .star {
   font-size: 2rem;
 }
+.star.btn-review.on {
+  color: #000;
+}
+.star.btn-review.off {
+  color: rgba(0, 0, 0, 0.2);
+}
