--- a/client/src/components/AddReview/AddReview.css
+++ b/client/src/components/AddReview/AddReview.css
@@ -8,18 +8,24 @@
   display: flex;
   flex-direction: column;
 }
-.btn-review {
+.btn-review,
+.btn-review_small {
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer;
   font-size: 2rem;
 }
-.btn-review.on {
+.btn-review_small {
+  font-size: 1.5rem;
+}
+.btn-review.on,
+.btn-review_small.on {
   color: #000;
 }
 
-.btn-review.off {
+.btn-review.off,
+.btn-review_small.off {
   color: rgba(0, 0, 0, 0.2);
 }
 .form {
