--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -21,19 +21,70 @@ img.user-pix-placeholder {
 
   margin-top: -20px;
 }
-.user-reviews-placeholder {
-  margin-top: 100px;
+.Profile_reviews {
+  margin-top: 20px;
   font-size: 1.6rem;
+  display: flex;
+  text-align: left;
+  border-bottom: 1px solid #f32dc8;
+}
+.Profile_reviews:first-child {
+  margin-top: 0;
+}
+
+.column-left {
+  width: 30%;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.column-right h5 {
+  margin: 0;
+  font-weight: normal;
+  font-size: 1.7rem;
+}
+.column-right {
+  width: 65%;
+  margin-top: -5px;
+  margin-bottom: 20px;
+}
+.column-right.Star-container {
+  width: 60%;
+  /* width: 30%; */
+}
+img {
+  width: 100%;
+}
+.profile-container {
+  overflow-y: scroll;
+  height: 90%;
+}
+ul.Profile_User_reviews {
+  padding: 0;
+  list-style-type: none;
+  margin-top: 0;
 }
 .user-foto {
   z-index: 100;
   position: absolute;
   left: 45%;
 }
+.review-btns {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.btn--btn-primary.reviews {
+  width: 45%;
+  margin: 0;
+  height: 35px;
+  padding: 0;
+  font-weight: 100;
+}
+
 .Profile-UserContainer {
   border: 1px solid rgba(0, 0, 0, 0.5);
   padding: 3.5rem;
-  /* height: 58vh; */
   background-image: url('../../assets/images/hairwhitebg.jpg');
   position: relative;
   height: fit-content;
@@ -44,7 +95,12 @@ img.user-pix-placeholder {
   font-weight: 500;
   padding: 1rem;
   margin: 0;
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+}
+.Profile-UserContainer_reviews {
+  height: 35vh;
+  overflow: hidden;
 }
 
 .Profile-UserContainer_reviews.business {
@@ -80,8 +136,9 @@ img.user-pix-placeholder {
     background-image: url('../../assets/images/hairgrey-mobile.jpg');
     height: 100%;
   }
-}
-.FeatureContainer_image.User {
-  background-image: url('../../assets/images/hairwhite-mobile.jpg');
-  height: 100%;
+
+  .FeatureContainer_image.User {
+    background-image: url('../../assets/images/hairwhite-mobile.jpg');
+    height: 100%;
+  }
 }
