--- a/client/src/components/BusinessReviews/BusinessReviews.css
+++ b/client/src/components/BusinessReviews/BusinessReviews.css
@@ -41,8 +41,16 @@ h6 {
 ul.BusinessReviews_container {
   padding: 0;
   list-style-type: none;
-  margin-top: 2px0;
+  margin-top: 2px;
   border-top: 1px solid #f32dc8;
+}
+.BusinessDetails_reviews ul.BusinessReviews_container {
+  border-top: none;
+  margin-top: 0;
+}
+.BusinessDetails_reviews h6.BusinessReviews_container-noReviews {
+  margin-top: 0;
+  text-align: center;
 }
 .BusinessReviews_container {
   overflow-y: scroll;
@@ -50,4 +58,5 @@ ul.BusinessReviews_container {
 }
 .BusinessReviews_container-noReviews {
   margin-top: 20px;
+  text-align: center;
 }
