users show my business reviews and business reviews

--- a/client/src/components/BusinessReviews/BusinessReviews.css
+++ b/client/src/components/BusinessReviews/BusinessReviews.css
@@ -2,6 +2,7 @@
   width: 75px;
   height: 75px;
   border-radius: 50%;
+  background: slategray;
 }
 .person-circle.no-author {
   background: slategray;
