--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -2,7 +2,6 @@
   background-image: url('../../assets/images/hairwhite.jpg');
 }
 
-.FeatureContainer_image.Owner,
 .FeatureContainer_image.EditUser {
   background-image: url('../../assets/images/hairgreysm.jpg');
 }
@@ -138,8 +137,7 @@ ul.Profile_User_reviews {
     background-image: url('../../assets/images/hairwhite-mobile.jpg');
     height: 100%;
   }
-  .FeatureContainer_image.EditUser,
-  .FeatureContainer_image.Owner {
+  .FeatureContainer_image.EditUser {
     background-image: url('../../assets/images/hairgrey-mobile.jpg');
     height: 100%;
   }
