--- a/client/src/components/MyBusinessList/MyBusinessList.css
+++ b/client/src/components/MyBusinessList/MyBusinessList.css
@@ -11,3 +11,17 @@
   height: 90%;
   padding-bottom: 2rem;
 }
+
+/* ----- -> LoadSpinner <- ----- */
+.Profile-UserContainer {
+  display: grid;
+}
+.Profile-UserContainer.Owner section.FeatureContainer {
+  max-width: 100% !important;
+  gap: 0 !important;
+  grid-column: -3;
+  width: 0 !important;
+}
+.Profile-UserContainer.Owner section.FeatureContainer.LoadSpinner div.LoadSpinner-Wrapper {
+  margin-top: -45rem;
+}
