--- a/client/src/components/BusinessDetails/BusinessDetails.css
+++ b/client/src/components/BusinessDetails/BusinessDetails.css
@@ -120,6 +120,7 @@ h5.features:last-child {
     margin: auto;
     margin-top: 3rem;
     padding: 3rem;
+    padding-bottom: 0rem;
     flex: 1 1 auto;
     overflow-y: scroll;
   }
