--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -30,6 +30,9 @@ img.user-pix-placeholder {
 .Profile_reviews:first-child {
   margin-top: 0;
 }
+.Profile_reviews:last-child {
+  border-bottom: 20px;
+}
 
 .column-left {
   width: 25%;
@@ -102,7 +105,7 @@ ul.Profile_User_reviews {
 }
 
 .Profile-UserContainer_reviews {
-  height: 100%;
+  height: 55vh;
 }
 
 .Profile-UserContainer_reviews.business {
@@ -112,7 +115,7 @@ ul.Profile_User_reviews {
 
 .Profile_User_reviews {
   overflow-y: scroll;
-  height: 95%;
+  height: 65%;
 }
 
 .Profile_links {
@@ -148,6 +151,7 @@ ul.Profile_User_reviews {
   }
   .Profile-UserContainer {
     padding: 3rem;
+    padding-bottom: 0;
   }
   .Profile_reviews > .column-left {
     width: 40%;
@@ -163,5 +167,14 @@ ul.Profile_User_reviews {
   }
   .Profile_User_reviews > .Profile_reviews:last-child {
     border-bottom: none;
+  }
+  .Profile_User_reviews {
+    overscroll-behavior-y: contain;
+  }
+  li.Profile_reviews:last-child {
+    border-bottom: none;
+  }
+  .Profile-UserContainer.Owner {
+    height: 70vh;
   }
 }
