--- a/client/src/components/BusinessDetails/BusinessDetails.css
+++ b/client/src/components/BusinessDetails/BusinessDetails.css
@@ -37,6 +37,7 @@ h5.services {
   margin-top: 10px;
   margin-bottom: 5px;
   line-height: 1.5rem;
+  align-items: flex-start;
 }
 
 h5.features:last-child {
