--- a/client/src/components/LoadSpinner/LoadSpinner.css
+++ b/client/src/components/LoadSpinner/LoadSpinner.css
@@ -8,11 +8,13 @@
   }
 }
 
-.loadingio-spinner-spinner-94sumfx7kxi {
-  width: 200px;
-  height: 200px;
-  display: inline-block;
+.Spinner-wrapper {
+  position: absolute;
+  top: 35%;
+  left: 42%;
+  transform: translate(-50%, -50%);
 }
+
 .ldio-cs9r5gg8z0w {
   width: 100%;
   height: 100%;
@@ -93,4 +95,13 @@
   transform: rotate(330deg);
   animation-delay: 0s;
   background: #f32dc8;
+}
+
+/* ///////media queries ////////// */
+
+@media screen and (max-width: 575px) {
+  .Spinner-wrapper {
+    left: 25%;
+    transform: translate(-50%, -50%);
+  }
 }
