update works, but nested fields not showing up for owner in edit form

--- a/client/src/components/MyBusinessList/MyBusinessList.css
+++ b/client/src/components/MyBusinessList/MyBusinessList.css
@@ -9,6 +9,9 @@
 }
 .btn--btn-primary.twoLines.business {
   width: 95px;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 5px;
 }
 .btn--btn-primary.twoLines.business.reviews {
   height: 42px;
