--- a/client/src/components/BusinessDetails/BusinessDetails.css
+++ b/client/src/components/BusinessDetails/BusinessDetails.css
@@ -30,6 +30,7 @@ ul.BusinessDetails-ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-transform: capitalize;
 }
 
 h5.features,
@@ -49,7 +50,6 @@ h5.features:last-child {
   padding: 3.5rem;
   margin-top: 160px;
   grid-column: 7/14;
-  /* height: fit-content; */
   max-height: 58vh;
   overflow: hidden;
   padding-bottom: 0;
